--- a/Contact.html
+++ b/Contact.html
@@ -73,7 +73,7 @@
             </li>
             <li class="faq-questions">Q: Est-ce que vos termes et conditions ont changé depuis la pandémie?</li>
             <li class="faq-reponse">A: Absolument, les termes et conditions mise à jour sont maintenant disponible
-                sur notre page principale, ainsi que la section <u>Processus de réparation'</u>.
+                sur notre page principale, ainsi que la section <u>'Informations'</u>.
             </li>
             <li class="faq-questions">Q: Ma demande de repas a été refusé en raison de 'manque de communication'
                 ! Qu'est-ce que ça veut dire?
@@ -92,7 +92,7 @@
             <li>Vous avez un adresse courriel valide.</li>
             <li>Vous nous excluez de votre boîte à spam et d'ordure. Certains services de messageries nous considère
                 comme du spam, assurez-vous de vérifiez votre onglet spam lorsque vous recevrez un message automatique
-                pour confirmer votre demande.
+                pour confirmer votre commande.
             </li>
             <li>Vous incrivez votre prénom, nom, adresse postale, ainsi que une courte
                 description de/des question(s) qui n'ont pas été répondu à l'aide du site web.
