--- a/Index.html
+++ b/Index.html
@@ -34,10 +34,9 @@
     <div class="left-bg"></div>
     <a href="https://www.istockphoto.com/photo/chef-standing-behind-full-lunch-service-station-with-assortment-of-food-in-trays-gm1185592329-334182117?utm_source=pixabay&utm_medium=affiliate&utm_campaign=SRP_image_sponsored&referrer_url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fcafeteria%2F&utm_term=cafeteria"
        target="_blank" title="Cliquez ici pour télécharger l'image">
-        <img alt="Un ordinateur portable accompagné d'une souri logitec noir sur le côté avec
-             un stéthoscope sur le dessus en plus d'être entouré de papier écrasé." class="image-intro"
+        <img alt="Des gens marchant avec un cabaret dans une cantine." class="image-intro"
              src="https://media.istockphoto.com/photos/chef-standing-behind-full-lunch-service-station-with-assortment-of-picture-id1185592329"></a>
-    <h1 id="description">Nami's Fix: Qu'est-ce que c'est?</h1>
+    <h1 id="description">Lunch écolier: Qu'est-ce que c'est?</h1>
     <section class="description">
         <a href="https://www.istockphoto.com/vector/foodn-family-gm165968505-23040742?&utm_campaign=SRP_vector_noresults&referrer_url=https%3A//pixabay.com/vectors/search/kids%2520cafeteria/&utm_term=kids%20cafeteria"
            target="_blank" title="Cliquez ici pour télécharger l'image">
@@ -45,13 +44,13 @@
                  class="image-description-right"
                  src="https://media.istockphoto.com/vectors/foodn-family-vector-id165968505"></a>
         <p>
-            Ce site web à été conçu pour ceux qui cherche à réparer leur composants électroniques! Plus spécifiquement,
-            Nami's Fixest un service de réparation offert pour ceux qui désirent changer, remplacer, maintenir leur
-            composants électronique d'ordinateurs. Rendez-vous dans la section <a class="lien-textuel"
+            Ce site web à été conçu pour les parents qui chechent à bien nourrir leur enfants lors de l'année scolaire! Plus spécifiquement,
+            Lunch Écolier est un service de commande de repas offert pour ceux qui désirent changer, remplacer, suggéré des
+            repas de cantine. Rendez-vous dans la section <a class="lien-textuel"
                                                                                   href="Informations.html">
             'Informations'</a>
-            pour commencer votre demande! Si vous avez des questions à propos des procédures de livraison et
-            réparation, n'hésitez-pas à nous envoyez un <a class="lien-textuel-mail"
+            pour commencer votre demande! Si vous avez des questions à propos de nos procédures et environement de travail
+            , n'hésitez-pas à nous envoyez un <a class="lien-textuel-mail"
                                                            href="Contact.html#formatDuCourriel">courriel</a>.
         </p>
     </section>
@@ -60,10 +59,10 @@
         <br>
         <br>
         <p>
-            Nous offrons maintenant des services de nettoyage et de maintenance d'ordinateurs
-            pour pouvoir réanimer vos anciens ordinateurs qui pourraient vous sauvez du temps
-            ET de l'argent, surtout dans ces temps dûr de pandémie que nous faisons face ces temps-ci**.
-            Voici les nouveaux services en place pour répondre à la demande croissante depuis la pandémie :
+            Nous offrons maintenant des services de livraison de repas pour pouvoir réanimer nos services
+            malgré la pandémie, ce qui pourraient vous sauvez du temps ET de l'argent, surtout dans ces temps dûr de
+            pandémie que nous faisons face ces temps-ci**. Voici les nouveaux services en place pour répondre à la
+            demande croissante depuis la pandémie :
         </p>
         <a href="https://www.istockphoto.com/photo/people-social-distancing-and-wearing-facemasks-while-having-lunch-at-a-buffet-gm1224667602-360193275?utm_source=pixabay&utm_medium=affiliate&utm_campaign=SRP_image_sponsored&referrer_url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fcafeteria%2F&utm_term=cafeteria"
            target="_blank" title="Cliquez ici pour téléchargé l'image."><img
@@ -90,7 +89,7 @@
         <li><a href="#top">Revenir au début de page</a></li>
         <li><a href="#description">Revenir à la description</a></li>
         <li><a href="#updates">Revenir aux mise à jour</a></li>
-        <li>&copy; Copyright 2020 Lunch Ecolier&trade; All Rights Reserved</li>
+        <li>&copy; Copyright 2020 Lunch Écolier&trade; All Rights Reserved</li>
     </ul>
 </footer>
 </body>
