--- a/Informations.html
+++ b/Informations.html
@@ -28,34 +28,19 @@
 <section class="main">
     <div class="right-bg"></div>
     <div class="left-bg"></div>
-    <a href="https://pixabay.com/photos/organization-organization-chart-2478211/"
+    <a href="https://pixabay.com/fr/photos/avocado-planche-%C3%A0-d%C3%A9couper-cuisson-1838785/"
        target="_blank" title="Cliquez ici pour télécharger l'image">
-        <img alt="Une main qui pointe vers un tableau noir qui contient un schémas d'un processus en craie."
+        <img alt="une planche à découper avec des légumes posé dessus."
              class="image-intro"
-             src="https://cdn.pixabay.com/photo/2017/07/06/14/48/organization-2478211_960_720.jpg"></a>
+             src="https://cdn.pixabay.com/photo/2016/11/19/11/38/avocado-1838785_960_720.jpg"></a>
     <section class="equipementSupporte" id="equipementSupporte">
-        <h1>Qu'est-ce qu'on répare?</h1>
+        <h1>Qu'est-ce qu'on prépare?</h1>
         <p>
-            Quels sont les équipements qu'on accepte? Les catégories ci-dessous vont vous expliquer en détails qu'est
-            ce qui est elligible lors de l'évaluation des demandes de réparation/nettoyage. Ensuite, nous allons vous
-            montrez un tableau contenant les différents services et tarifs qui sont offert (services mis à jour depuis
+            Quels sont les demandes qu'on accepte? Les catégories ci-dessous vont vous expliquer en détails qu'est
+            ce qui est elligible lors de l'évaluation des demandes de repas. Ensuite, nous allons vous
+            montrez un tableau contenant les différents tarifs dépendemment de nos repas (services mis à jour depuis
             la pandémie).
         </p>
-        <br>
-        <br>
-        <ul>
-            <li>Ordinateurs portables : Les ordnateurs portables (Mac ou autres marque) sont accepté.</li>
-            <li>Ordinateurs de bureau : Seulement les <u>COMPOSANTS INTERNES</u> d'ordinateur(s) de bureau seront
-                accepté. C'est à dire, tous ce qui fait partie du corps et du fonctionnement d'un ordinateur de bureau :
-                RAM, processeur, HDD, SSD, NVME, ventilateur(s) de chassis, carte(s) graphique, ainsi que la carte mère
-                sont elligible.
-            </li>
-            <li>Accessoire(s) externes pour ordinateur : Haut parleur(s), souris, clavier, Écran DÉTACHABLE, disque
-                dur externe(s), SSD externe(s), lecteur DVD/CD, lecteur Blue-Ray, clé USB et des écouteur(s) sont
-                elligible d'un nettoyage et/ou réparation.
-
-            </li>
-        </ul>
     </section>
     <section class="tarif-paiement" id="tarifs">
         <h2>Tarifs et méthodes de paiements (post Covid-19)</h2>
@@ -63,32 +48,18 @@
             <tr>
                 <th>Services :</th>
                 <th>Tarifs :</th>
-                <th>Tarifs livraison selon la région:</th>
             </tr>
             <tr>
-                <td>Composant(s) interne(s) Macintosh(Mac)</td>
-                <td>29.99$(CAD)**/heure(s)</td>
-                <td>Canada: (gratuit)</td>
+                <td>Pâtes (lasagne, spaguetti, macaroni, etc)</td>
+                <td>8.50$</td>
             </tr>
             <tr>
-                <td>Accessoire(s) externe(s) Macintosh(Mac)</td>
-                <td>26.99$(CAD)**/heure(s)</td>
-                <td>Mexique: (non-inclu)</td>
+                <td>Poulet (poitrine, filet, frie, etc)</td>
+                <td>10.25$</td>
             </tr>
             <tr>
-                <td>Composant(s) interne(s) standard(Windows/Linux/etc)</td>
-                <td>21.99$(CAD)**/heure(s)</td>
-                <td>États-Unis: (Gratuit) sauf Indiana et Texas</td>
-            </tr>
-            <tr>
-                <td>Accessoire(s) externe(s) standard(Windows/Linux/etc)</td>
-                <td>16.99$(CAD)**/heure(s)</td>
-                <td>Brésil: (non-inclu)</td>
-            </tr>
-            <tr>
-                <td>Nettoyage (physique et informatique) d'ordinateur ou d'accessoire(s)</td>
-                <td>12.99$(CAD)**</td>
-                <td>Cuba: (gratuit)</td>
+                <td>Nourriture instantané (burgers, hot-dogs, poutines, etc)</td>
+                <td>6.85$</td>
             </tr>
         </table>
         <p class="notice-tarifs">
@@ -108,10 +79,10 @@
             <li>Vous avez un adresse courriel valide.</li>
             <li>Vous nous excluez de votre boîte à spam et d'ordure. Certains services de messageries nous considère
                 comme du spam, assurez-vous de vérifiez votre onglet spam lorsque vous recevrez un message automatique
-                pour confirmer votre demande de réparation/nettoyage.
+                pour confirmer votre commande.
             </li>
             <li>Vous incrivez votre prénom, nom, adresse postale, nom COMPLET du produit qui à besoin de maintenance
-                ainsi que une courte description de/des équipements à nettoyer/réparer.
+                ainsi que une courte description de/des repas à ajouter/enlever/changer.
                 Ensuite, placez en pièce jointe d'une photo de votre produit en question (jpg ou png).
             </li>
             <li>De comprendre le français ou anglais!</li>
@@ -121,11 +92,11 @@
             cela fait, cliquez sur ce <a class="lien-textuel-mail"
                                          href="mailto:reparation.nettoyage-contact-us@courrier.uqam.ca">lien</a>
             pour formuler votre demande ou copiez le manuellement :
-            <u>reparation.nettoyage-contact-us@courrier.uqam.ca</u>.
+            <u>changement-repas-contact-us@courrier.uqam.ca</u>.
         </p>
         <br>
         <br>
-        <p class="remerciements"> De la part de toute l'équipe de Nami's Fix, nous vous remercions chaleureusement de
+        <p class="remerciements"> De la part de toute l'équipe de Lunch Écolier, nous vous remercions chaleureusement de
             votre lecture et
             demande, si vous en avez envoyé une ou plusieurs! Nous espérons que vous serez satisfait de nos services.
             À la prochaine!</p>
@@ -136,7 +107,7 @@
         <li><a href="#top">Revenir au début de page</a></li>
         <li><a href="#equipementSupporte">Revenir aux lunchs disponibles</a></li>
         <li><a href="#format-courriel">Revenir aux exigences concernant la commande</a></li>
-        <li>&copy; Copyright 2020 Nami's Fix&trade; All Rights Reserved</li>
+        <li>&copy; Copyright 2020 Lunch Écolier&trade; All Rights Reserved</li>
     </ul>
 </footer>
 </body>
