--- a/About-us.html
+++ b/About-us.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>À propos de nous</title>
-    <link href="style-about-us.css" rel="stylesheet">
+    <link href="style-main.css" rel="stylesheet">
 </head>
 <body id="top">
 <nav>
     <ul class="menu">
-        <li><a href="Index.html">Page principale</a></li>
-        <li><a href="About-us.html">À propos de nous</a></li>
-        <li><a href="Processus-de-reparation.html">Processus de réparation</a></li>
-        <li><a href="Contact-us.html">Contactez nous</a></li>
-        <li><a href="Formulaire.php">Requêtes/Plaintes</a></li>
-        <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
+        <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Consultation</a>
+        </li>
+        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contact</a></li>
+        <li><a href="form-adoption.html"
+               title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
+            Mise en adoption</a></li>
+        <li><a class="logo" href="https://github.com/Nami-R2301/INF3190_A2020"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
             <img alt="logo Github" height="16px" src="https://image.flaticon.com/icons/png/512/25/25231.png"
