--- a/Index.html
+++ b/Index.html
@@ -8,17 +8,13 @@
 <body id="top">
 <nav>
     <ul class="menu">
-        <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Page principale</a>
+        <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Consultation</a>
         </li>
-        <li><a href="About-us.html" title="En savoir plus sur le site et les services données">
-            À propos de nous</a></li>
-        <li><a href="Processus-de-reparation.html" title="Allez vers la page qui informe comment utilisé les services">
-            Processus de réparation</a></li>
-        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
-        <li><a href="Formulaire.php"
+        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contact</a></li>
+        <li><a href="form-adoption.html"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
-            Requêtes/Plaintes</a></li>
-        <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
+            Mise en adoption</a></li>
+        <li><a class="logo" href="https://github.com/Nami-R2301/INF3190_A2020"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
             <img alt="logo Github" height="16px" src="https://image.flaticon.com/icons/png/512/25/25231.png"
