--- a/Contact-us.html
+++ b/Contact-us.html
@@ -8,11 +8,10 @@
 <body id="top">
 <nav>
     <ul class="menu">
-        <li><a href="Index.html">Page principale</a></li>
+        <li><a href="Index.html">Consultation</a></li>
         <li><a href="About-us.html">À propos de nous</a></li>
-        <li><a href="Processus-de-reparation.html">Processus de réparation</a></li>
         <li><a href="Contact-us.html">Contactez nous</a></li>
-        <li><a href="Formulaire.php">Requêtes/Plaintes</a></li>
+        <li><a href="form-adoption.html">Mise en adoption</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
