--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <ul class="menu">
         <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Consultation</a>
         </li>
-        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contact</a></li>
+        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
         <li><a href="form-adoption.html"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
             Mise en adoption</a></li>
@@ -113,7 +113,7 @@
         <li><a href="#top">Revenir au début de page</a></li>
         <li><a href="#description">Revenir à la description</a></li>
         <li><a href="#updates">Revenir aux mise à jour</a></li>
-        <li>&copy; Copyright 2020 Nami's Fix&trade; All Rights Reserved</li>
+        <li>&copy; Copyright 2020 Adopt-me!&trade; All Rights Reserved</li>
     </ul>
 </footer>
 </body>
