--- a/form-adoption.html
+++ b/form-adoption.html
@@ -12,7 +12,7 @@
     <ul class="menu">
         <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Consultation</a>
         </li>
-        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contact</a></li>
+        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
         <li><a href="form-adoption.html"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
                 Mise en adoption</a></li>
