--- a/form-adoption.html
+++ b/form-adoption.html
@@ -12,7 +12,6 @@
     <ul class="menu">
         <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Consultation</a>
         </li>
-        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
         <li><a href="form-adoption.html"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
                 Mise en adoption</a></li>
@@ -43,17 +42,16 @@
             <img class="image-description-right"
                  src="https://cdn.pixabay.com/photo/2016/07/21/14/18/dog-1532627_960_720.png"
                  alt="Un chat et un chien assis fixant avec leur regard leur droite."></a>
-        <p>D'abord, pourquoi faire des requêtes de repas écolier? La réponse est simple, parce que
-            nous voulons nous assurez que tous les enfants aillent des lunchs équitable et sain pour
-            les aider à mieux se concentrer en classe! Si jamais vous avez des plaintes concernant la
-            qualité de nos repas ainsi que nos habitude d'hygiène et gestion en cuisine, veuillez visiter
-            la section <a class="lien-textuel" href="Contact-us.html" title="Contactez nous en cliquant ce lien">
-                contact</a> de notre site web.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu f
+            ugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
     </section>
     <h2 id="form" class="form-titre">Formulaire à remplir :</h2>
 
 
-    <form name="form" action="form-adoption.php" method="POST" onsubmit="return validateForm()">
+    <form action="form-adoption.php" method="POST" onsubmit=" return onSubmit()">
 
         <p id="EnomAnimal"></p>
         <label for="nomAnimal">Nom de l'animal :<span class="asterix"> * </span></label>
